--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <main>
     <div class="hero">
       <h1 class="hero__title">Under Construction</h1>
-      <p class="hero__subtitle">In the meantime, you can visit my <a href="https://www.instagram.com/jovilashedme/" target="_blank">Instagram</a> or book <a href="https://square.site/book/NMW0X3RTHKGXE/jovi-lashed-me-kirkland-wa" target="_blank">here</a> ❤️.</p>
+      <p class="hero__subtitle">In the meantime, you can visit my <a href="https://www.instagram.com/jovilashedme/" target="_blank">Instagram</a> or book <a href="https://square.site/book/NMW0X3RTHKGXE/jovi-lashed-me-kirkland-wa" target="_blank">here</a> ❤️</p>
     </div>
   </main>
 </body>
